[gd_scene format=3 uid="uid://bn5jvwnfexjd"]

[ext_resource type="Script" uid="uid://dh0215rei81k6" path="res://scripts/player.gd" id="1_oul6g"]
[ext_resource type="Texture2D" uid="uid://btpct583fml6n" path="res://Assets/Sprites/Player/Player.png" id="2_rkbax"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kqu6x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oul6g"]
radius = 9.055386

[sub_resource type="CircleShape2D" id="CircleShape2D_rkbax"]
radius = 100.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_oul6g"]
blend_mode = 3

[sub_resource type="Animation" id="Animation_rkbax"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphics/Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_g1dw6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphics/Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("graphics/Sprite2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 22)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("graphics/Sprite2D2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_yw30f"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphics/Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 5]
}

[sub_resource type="Animation" id="Animation_qjkh3"]
resource_name = "die"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphics/Sprite2D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.38, 0.735),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 22), Vector2(2.999998, -124), Vector2(2, -58)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("graphics/Sprite2D2:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.23333335, 0.735),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 17.148727, 31.415926]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qjkh3"]
_data = {
&"Idle": SubResource("Animation_rkbax"),
&"RESET": SubResource("Animation_g1dw6"),
&"Walk": SubResource("Animation_yw30f"),
&"die": SubResource("Animation_qjkh3")
}

[node name="player" type="CharacterBody2D" unique_id=805205783 groups=["player"]]
collision_layer = 2
script = ExtResource("1_oul6g")
speed = 200.0
jump_strength = -400.0
camera_follow_speed = 1.0
camera_dead_zone = 40.0
camera_dampening = 10.0
camera_movement_effect = 0.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1095635682]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_kqu6x")

[node name="ground_finder" type="Area2D" parent="." unique_id=1771362035]
position = Vector2(0, 8)
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground_finder" unique_id=9394029]
shape = SubResource("CircleShape2D_oul6g")

[node name="walls_finder" type="Area2D" parent="." unique_id=987698571]
position = Vector2(0, 8)
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls_finder" unique_id=1176411717]
shape = SubResource("CircleShape2D_rkbax")

[node name="graphics" type="Node2D" parent="." unique_id=1660909222]

[node name="shadow" type="Node2D" parent="graphics" unique_id=1190137418]

[node name="colorRect" type="ColorRect" parent="graphics/shadow" unique_id=1774154051]
material = SubResource("CanvasItemMaterial_oul6g")
offset_left = -14.0
offset_top = 5.0
offset_right = 14.0
offset_bottom = 17.0
color = Color(0.8819366, 0.8819366, 0.88193655, 1)

[node name="placeholder" type="ColorRect" parent="graphics" unique_id=1762736947]
visible = false
offset_left = -10.0
offset_top = -30.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(0.55225843, 0.3459333, 0.6577635, 1)

[node name="cameraHandler" type="Node2D" parent="graphics" unique_id=1069777500]
top_level = true

[node name="Camera2D" type="Camera2D" parent="graphics/cameraHandler" unique_id=152757788]

[node name="Sprite2D2" type="Sprite2D" parent="graphics" unique_id=1301633735]
position = Vector2(2, 22)
scale = Vector2(3, 3)
texture = ExtResource("2_rkbax")
hframes = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1441578030]
libraries/ = SubResource("AnimationLibrary_qjkh3")
